--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Squeezelite-ESP32 installer</title>
+    <title>justfortest-ESP32 installer</title>
     <meta
       name="description"
-      content="Easily allow users to install Squeezelite-ESP32 firmware on the web."
+      content="Easily allow users to install justfortest firmware on the web."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="color-scheme" content="dark light" />
@@ -84,16 +84,10 @@
       <p>Select your product</p>
       <ul class="radios">
         <li>
-          <label><input type="radio" name="type" value="i2s" /> I2S</label>
+          <label><input type="radio" name="type" value="test1" /> I2S</label>
         </li>
         <li>
-          <label><input type="radio" name="type" value="muse" /> Muse</label>
-        </li>
-        <li>
-          <label><input type="radio" name="type" value="muse_proto" /> Muse Proto</label>
-        </li>
-        <li>
-          <label><input type="radio" name="type" value="squeezeamp" /> SqueezeAmp</label>
+          <label><input type="radio" name="type" value="test2" /> Muse</label>
         </li>
       </ul>
       <p class="button-row" align="center">
@@ -102,7 +96,7 @@
 
       <div class="footer">
         <a href="https://github.com/sle118/squeezelite-esp32"
-          >Squeezelite-ESP32</a
+          >justfortest-ESP32</a
         > &mdash;
         Installer powered by <a href="https://esphome.github.io/esp-web-tools/">ESP Web Tools</a>.
     </div>
