--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>Squeezelite-ESP32 installer</h1>
-      <p>This is a prototype and not up-to-date. For latest installations, see the <a href="https://sle118.github.io/squeezelite-esp32-installer/">Squeezelite Web Installer</a>.</p>
+      <h1>justfortest-ESP32 installer</h1>
       <p>Select your product</p>
       <ul class="radios">
         <li>
