--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
       <p>Select your product</p>
       <ul class="radios">
         <li>
-          <label><input type="radio" name="type" value="test1" /> I2S</label>
+          <label><input type="radio" name="type" value="test1" /> test1</label>
         </li>
         <li>
-          <label><input type="radio" name="type" value="test2" /> Muse</label>
+          <label><input type="radio" name="type" value="test2" /> test2</label>
         </li>
       </ul>
       <p class="button-row" align="center">
