--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>justfortest-ESP32 installer</title>
+    <title>Mspitzel initialize installer</title>
     <meta
       name="description"
-      content="Easily allow users to install justfortest firmware on the web."
+      content="Easily allow users to install Mspitzel initialze firmware on the web."
     />
     <meta name="viewport" content="width=device-width" />
     <meta name="color-scheme" content="dark light" />
@@ -83,10 +83,7 @@
       <p>Select your product</p>
       <ul class="radios">
         <li>
-          <label><input type="radio" name="type" value="test1" /> test1</label>
-        </li>
-        <li>
-          <label><input type="radio" name="type" value="test2" /> test2</label>
+          <label><input type="radio" name="type" value="mspitzel_init" /> Mspitzel init</label>
         </li>
       </ul>
       <p class="button-row" align="center">
@@ -94,8 +91,8 @@
       </p>
 
       <div class="footer">
-        <a href="https://github.com/aemkeinyc/justfortest"
-          >justfortest-ESP32</a
+        <a href="https://github.com/aemkeinyc/Mspitzel-Robomow-Initialize"
+          >Mspitzel initialize installer</a
         > &mdash;
         Installer powered by <a href="https://esphome.github.io/esp-web-tools/">ESP Web Tools</a>.
     </div>
