--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>justfortest-ESP32 installer</h1>
+      <h1>Mspitzel initialize installer</h1>
       <p>Select your product</p>
       <ul class="radios">
         <li>
