--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <p>Select your product</p>
       <ul class="radios">
         <li>
-          <label><input type="radio" name="type" value="mspitzel_init" /> Mspitzel init</label>
+          <label><input type="radio" name="type" value="mspitzel_init" /> LOLIN D32pro </label>
         </li>
       </ul>
       <p class="button-row" align="center">
