--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
       <p class="button-row" align="center">
         <esp-web-install-button class="invisible"></esp-web-install-button>
       </p>
+      
+      <p>Click to download Mspitzel.bin<p>
+
+	<a href="/download.png" download>
+  	<img src="/download.png" alt="W3Schools" width="104" height="142">
+	</a>
 
       <div class="footer">
         Installer powered by <a href="https://esphome.github.io/esp-web-tools/">ESP Web Tools</a>.
