--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       
       <p>Click to download Mspitzel.bin<p>
 
-	<a href="/download.png" download>
-  	<img src="/download.png" alt="W3Schools" width="104" height="142">
+	<a href="https://github.com/aemkeinyc/Mspitzel-Robomow-initialize/blob/d5f6ec9ea9951556ddecc17b9085a0dfed40b09a/download.png" download>
+  	<img src="https://github.com/aemkeinyc/Mspitzel-Robomow-initialize/blob/d5f6ec9ea9951556ddecc17b9085a0dfed40b09a/download.png" alt="Download" width="104" height="142">
 	</a>
 
       <div class="footer">
