--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       
       <p>Click to download Mspitzel.bin<p>
 
-	<a href="./download.png" download>
+	<a href="./mspitzel.bin" download>
   	<img src="./download.png" alt="Download" width="240" height="62">
 	</a>
 
