--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   </head>
   <body>
     <div class="content">
-      <h1>Mspitzel initialize installer</h1>
+      <h1><center>Mspitzel initialize installer</center></h1>
       <p>Dieses tool installiert die initiale firmware für Mspitzel. Nach dem aufspielen stellt der Lolin D32 pro einen wifi accesspoint zur Verfügung mit der SSID mspitzel. Nun zu mspitzel via wifi verbinden. Dann per Browser die Adresse 192.168.4.1:8080 aufrufen und dort die Zugangsdaten, SSID und Passwort deines Routers eintragen. Mspitzel verbindet sich dann mit deinem Router. Logge dich in deinem Router ein um die IP Adresse nachzusehen die Mspitzel erhalten hat. Gehe dann über deinen Browser auf http://<font color="red">IPmspitzel</font>:8080 wähle dort die Firmware über Datei auswählen aus und drücke Update. Nach erfolgreichem Upload sollte ein OK erscheinen. Nun ist der Mspitzel über http://<font color="red">IPmspitzel</font> erreichbar.<br>Initial sind Benutzername: Mspitzel und Passwort: Mspitzel007 </p>
             <p>This tool installs the initial firmware for Mspitzel. After installation, the Lolin D32 pro provides a wifi access point with the SSID mspitzel. Now connect to mspitzel via wifi. Then use your browser to access the address 192.168.4.1:8080 and enter your router's access data, SSID and password there. Mspitzel then connects to your router. Log in to your router to check the IP address that Mspitzel received. Then go to http://<font color="red">IPmspitzel</font>:8080 in your browser, select the firmware via "Datei Auswählen" and press Update. After a successful upload, an OK should appear. Mspitzel can now be reached via http://<font color="red">IPmspitzel</font><br>The initial username is: Mspitzel and password: Mspitzel007 </p><br><br>
       <p>Select your product which you want to flash</p>
@@ -92,10 +92,10 @@
         <esp-web-install-button class="invisible"></esp-web-install-button>
       </p><br><br>
       
-      <p>Click to download Mspitzel.bin<p>
+      <p><center>Click to download Mspitzel.bin</center><p>
 
 	<a href="./mspitzel.bin" download>
-  	<img src="./download.png" alt="Download" width="240" height="62">
+  	<center><img src="./download.png" alt="Download" width="240" height="62"></center>
 	</a>
 
       <div class="footer">
